# GeoLEDic

./: .gitignore  .gitmodules  CMakeLists.txt  Dome.cpp  Dome.hpp  GeoLEDic.cpp  LICENSE  MidiSource.hpp  ProgramFactory.cpp  README.md  Triangle.cpp  Triangle.hpp  Vertex.cpp  Vertex.hpp  dome.hpp  gen_dome.py  generate.py  main-pc.cpp  pio_generate_sources.py  platformio.ini  triangles.cpp
.github/workflows/: macos-mojave.yml  macos.yml  platformio.yml  ubuntu.yml
FastLED-OpenGL/: CMakeLists.txt
FastLED-OpenGL/examples/: triangle.cpp  triangle_lighting.cpp
FastLED-OpenGL/flogl/: LED.vertexshader  Window.cpp  flogl.cpp  flogl.hpp  lit_triangle.fragmentshader  lit_triangle.vertexshader
FastLED-OpenGL/gfx/: Config.hpp  Gfx.cpp  Gfx.hpp  Window.cpp  Window.hpp  platform.h  shader.cpp  shader.hpp  texture.cpp
conf/: CMakeLists.txt  colors.py  makeKompleteTemplates.py  makeProgramBaseClasses.py  makeProgramFactory.py  programs.py
flogl/: CMakeLists.txt  Window.cpp  Window.hpp
img/: Icon.icns
programs/: CMakeLists.txt  SparklesAndTriangles.cpp  SparklesAndTriangles.hpp
src/: CRGB_iterator.cpp  CRGB_iterator.hpp  Controls.cpp  Controls.hpp  DecayingShapesFromNotes.cpp  DecayingShapesFromNotes.hpp  Dome.cpp  Dome.hpp  DomeDefs.hpp  DomeWrapper.hpp  Edge.cpp  Edge.hpp  GeoLEDic.cpp  GeoLEDic.hpp  MidiDefs.hpp  MidiMessage.cpp  MidiMessage.hpp  MidiSource.hpp  Notes.cpp  Notes.hpp  NotesWithMappings.cpp  NotesWithMappings.hpp  Palettes.cpp  Palettes.hpp  Program.hpp  ProgramFactory.cpp  ProgramFactory.hpp  Serial.hpp  ShapesFromNotes.cpp  ShapesFromNotes.hpp  Strips.hpp  Triangle.cpp  Triangle.hpp  Vector.cpp  Vector.hpp  Vertex.cpp  Vertex.hpp  main-pc.cpp  main.cpp
src/programs/: BetterEdgy.cpp  BetterEdgy.hpp  CMakeLists.txt  DefaultRainbow.cpp  DefaultRainbow.hpp  Diagnostic.cpp  Diagnostic.hpp  Edgy.cpp  Edgy.hpp  Fire.cpp  Fire.hpp  Lightning.cpp  Lightning.hpp  MovingRainbow.cpp  MovingRainbow.hpp  Noise.cpp  Noise.hpp  OrganicLine.cpp  OrganicLine.hpp  ProgramHelpers.hpp  SparklesAndTriangles.cpp  SparklesAndTriangles.hpp  WarpDriveMandala.cpp  WarpDriveMandala.hpp
test/: CMakeLists.txt
test/Edge/: test_orientation.cpp
test/Notes/: test_decaying_notes.cpp  test_notes.cpp
test/Triangle/: common-test-helpers.hpp  test_edges.cpp  test_geometry.cpp  test_orientation_errors.cpp
test/Vector/: test_vector.cpp
test/Vertex/: test_angles.cpp
test/geometry/: test_Edge.cpp
test/triangle/: common-test-helpers.cpp  common-test-helpers.hpp  test_edges.cpp  test_orientation.cpp
